INTEGRATE_TAILOR_APP: Fix bottom navigation parent layout and behavior, implement TODO
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/libraries/tailormade_dls/src/main/res/values-night/styles.xml
+++ b/libraries/tailormade_dls/src/main/res/values-night/styles.xml
@@ -21,6 +21,22 @@
         <item name="android:textColor">@color/color_white</item>
     </style>
 
+    <style name="TextAppearance.TailorMade.Headline3.BlackHigh" parent="TextAppearance.TailorMade.Headline3">
+        <item name="android:textColor">@color/color_white</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Headline3.BlackHigh.Bold" parent="TextAppearance.TailorMade.Headline3.BlackHigh">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Headline3.BlackMedium" parent="TextAppearance.TailorMade.Headline3">
+        <item name="android:textColor">@color/color_white</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Headline3.BlackLight" parent="TextAppearance.TailorMade.Headline3">
+        <item name="android:textColor">@color/color_white</item>
+    </style>
+
     <style name="TextAppearance.TailorMade.Body1.BlackHigh" parent="TextAppearance.TailorMade.Body1">
         <item name="android:textColor">@color/color_white</item>
     </style>
