--- a/tailor-app/src/main/res/layout/activity_main.xml
+++ b/tailor-app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,7 @@
             style="@style/Theme.TailorMade.BottomNavigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dp_16"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
