--- a/features/tailormade_search/src/main/res/layout/layout_search_tailor_location.xml
+++ b/features/tailormade_search/src/main/res/layout/layout_search_tailor_location.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingBottom="@dimen/dp_16">
 
     <TextView
         android:id="@+id/text_view_filter_location_label"
@@ -14,17 +14,6 @@
         android:layout_margin="@dimen/dp_16"
         android:text="@string/tailor_location_label"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/button_show_all_location" />
-
-    <Button
-        android:id="@+id/button_show_all_location"
-        style="@style/Widget.MaterialComponents.Button.TextButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_8"
-        android:layout_marginEnd="@dimen/dp_16"
-        android:text="@string/show_all_label"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
@@ -35,7 +24,7 @@
         android:layout_margin="@dimen/dp_16"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button_show_all_location"
+        app:layout_constraintTop_toBottomOf="@id/text_view_filter_location_label"
         app:startIconDrawable="@drawable/ic_search">
 
         <AutoCompleteTextView
