--- a/features/tailormade_search/src/main/res/layout/activity_search.xml
+++ b/features/tailormade_search/src/main/res/layout/activity_search.xml
@@ -41,7 +41,7 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager_search"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/dp_0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
