--- a/features/tailormade_search/src/main/res/layout/layout_sort_and_filter.xml
+++ b/features/tailormade_search/src/main/res/layout/layout_sort_and_filter.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<HorizontalScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/scroll_view_sort_and_filter"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:scrollbars="none">
 
     <com.google.android.material.chip.ChipGroup
         android:id="@+id/chip_group_sort_and_filter"
