--- a/libraries/tailormade_dls/src/main/res/layout/layout_loading_dialog.xml
+++ b/libraries/tailormade_dls/src/main/res/layout/layout_loading_dialog.xml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:paddingHorizontal="@dimen/dp_20"
+    android:paddingVertical="@dimen/dp_32">
 
     <ProgressBar
         android:id="@+id/progress_bar_loading"
         android:layout_width="@dimen/dp_56"
         android:layout_height="@dimen/dp_56"
         android:layout_gravity="center"
+        android:layout_marginStart="@dimen/dp_20"
         android:indeterminate="true" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/text_view_loading"
+        style="@style/TextAppearance.TailorMade.Subtitle1.BlackHigh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="@dimen/dp_20"
+        android:text="@string/loading_dialog_text" />
+
+</LinearLayout>
