--- a/app/src/main/res/layout/layout_dashboard_tailor.xml
+++ b/app/src/main/res/layout/layout_dashboard_tailor.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginHorizontal="@dimen/dp_1"
+    android:layout_marginBottom="@dimen/dp_16"
     android:clickable="true"
     android:focusable="true"
     app:cardElevation="@dimen/dp_4"
@@ -16,9 +18,9 @@
 
         <include
             android:id="@+id/layout_card_tailor"
-            layout="@layout/layout_card_profile"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            layout="@layout/layout_card_profile" />
 
         <View
             android:id="@+id/view_separator"
