--- a/features/tailormade_design_detail/src/main/res/layout/fragment_add_size_bottom_sheet.xml
+++ b/features/tailormade_design_detail/src/main/res/layout/fragment_add_size_bottom_sheet.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingBottom="@dimen/dp_16"
     tools:context=".feature.addOrEditDesign.view.AddSizeBottomSheetFragment">
 
     <TextView
