--- a/features/tailormade_design_detail/src/main/res/layout/layout_design_detail_general_info.xml
+++ b/features/tailormade_design_detail/src/main/res/layout/layout_design_detail_general_info.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_400"
             android:layout_marginBottom="@dimen/dp_28"
-            android:src="@drawable/drawable_gender_male"
+            android:scaleType="centerCrop"
             tools:ignore="ContentDescription" />
 
         <TextView
