--- a/features/tailormade_design_detail/src/main/res/layout/fragment_design_detail.xml
+++ b/features/tailormade_design_detail/src/main/res/layout/fragment_design_detail.xml
@@ -157,12 +157,12 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_nav_design_detail"
+    <include
+        android:id="@+id/layout_design_detail_bottom_nav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:layout_margin="@dimen/dp_16"
-        app:menu="@menu/menu_bottom_nav_design_detail" />
+        layout="@layout/layout_design_detail_bottom_nav" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
