INTEGRATE_TAILOR_APP: Change bottom nav to custom layout, fix add to cart and checkout item
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_design_detail/src/main/res/layout/layout_design_detail_bottom_nav.xml
+++ b/features/tailormade_design_detail/src/main/res/layout/layout_design_detail_bottom_nav.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:elevation="@dimen/dp_16"
     android:orientation="horizontal"
+    android:background="@drawable/drawable_bottom_nav_background"
     android:paddingHorizontal="@dimen/dp_16"
     android:weightSum="4">
 
