--- a/features/tailormade_design_detail/src/main/res/layout/layout_design_detail_bottom_nav.xml
+++ b/features/tailormade_design_detail/src/main/res/layout/layout_design_detail_bottom_nav.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dp_56"
+    android:layout_height="@dimen/dp_64"
     android:elevation="@dimen/dp_16"
     android:orientation="horizontal"
     android:background="@drawable/drawable_bottom_nav_background"
@@ -29,9 +29,10 @@
 
     <Button
         android:id="@+id/button_order_now"
-        style="@style/Theme.TailorMade.Button.Small.Rounded"
+        style="@style/Theme.TailorMade.Button.Rounded"
         android:layout_width="@dimen/dp_0"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginStart="@dimen/dp_16"
         android:layout_weight="2"
         android:text="@string/order_now_label" />
