--- a/libraries/tailormade_dls/src/main/res/layout/layout_card_design.xml
+++ b/libraries/tailormade_dls/src/main/res/layout/layout_card_design.xml
@@ -57,5 +57,37 @@
             app:layout_constraintBottom_toBottomOf="parent"
             tools:text="@string/design_price_label" />
 
+        <TextView
+            android:id="@+id/text_view_design_after_discount"
+            style="@style/TextAppearance.TailorMade.Body2.Primary.Bold"
+            android:layout_width="@dimen/dp_0"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_4"
+            android:layout_marginStart="@dimen/dp_8"
+            android:layout_marginBottom="@dimen/dp_12"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_view_design_name"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:text="@string/order_price_discount_label" />
+
+        <TextView
+            android:id="@+id/text_view_design_before_discount"
+            style="@style/TextAppearance.TailorMade.Body2.BlackMedium2"
+            android:layout_width="@dimen/dp_0"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_4"
+            app:layout_constraintBottom_toBottomOf="@id/text_view_design_price"
+            app:layout_constraintStart_toEndOf="@id/text_view_design_after_discount"
+            app:layout_constraintTop_toTopOf="@id/text_view_design_price"
+            tools:text="@string/order_discount_label" />
+
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/group_discount_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:constraint_referenced_ids="text_view_design_after_discount, text_view_design_before_discount"
+            tools:visibility="visible" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
