INTEGRATE_TAILOR_APP: Fix ui bugs in design and profile
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_profile/src/main/res/layout/fragment_profile_about.xml
+++ b/features/tailormade_profile/src/main/res/layout/fragment_profile_about.xml
@@ -25,9 +25,11 @@
         android:clickable="true"
         android:focusable="true"
         android:text="@string/edit_label"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@id/text_view_about_title"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/text_view_about_title" />
+        app:layout_constraintTop_toTopOf="@+id/text_view_about_title"
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/image_view_about_address"
