--- a/features/tailormade_design_detail/src/main/res/layout/fragment_design_detail.xml
+++ b/features/tailormade_design_detail/src/main/res/layout/fragment_design_detail.xml
@@ -12,6 +12,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dp_80"
             android:background="?attr/colorSurface2"
             android:orientation="vertical"
             tools:context=".feature.designDetail.view.DesignDetailFragment">
