--- a/features/tailormade_profile/src/main/res/layout/fragment_profile.xml
+++ b/features/tailormade_profile/src/main/res/layout/fragment_profile.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_grey_F1F1F1"
+    android:background="?attr/colorSurface2"
     android:orientation="vertical"
     tools:context=".feature.profile.view.ProfileFragment">
 
