--- a/libraries/tailormade_dls/src/main/res/drawable/drawable_rounded_top_background.xml
+++ b/libraries/tailormade_dls/src/main/res/drawable/drawable_rounded_top_background.xml
@@ -1,24 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle">
-            <gradient
-                android:angle="90"
-                android:endColor="@color/color_black_20"
-                android:startColor="@color/color_black_87" />
-            <corners
-                android:topLeftRadius="@dimen/dp_20"
-                android:topRightRadius="@dimen/dp_20" />
-        </shape>
-    </item>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners
+        android:topLeftRadius="@dimen/dp_20"
+        android:topRightRadius="@dimen/dp_20" />
 
-    <item>
-        <shape android:shape="rectangle">
-            <corners
-                android:topLeftRadius="@dimen/dp_20"
-                android:topRightRadius="@dimen/dp_20" />
-
-            <solid android:color="?attr/cardBackgroundColor" />
-        </shape>
-    </item>
-</layer-list>
+    <solid android:color="?attr/cardBackgroundColor" />
+</shape>
