--- a/libraries/tailormade_dls/src/main/res/layout/layout_card_design.xml
+++ b/libraries/tailormade_dls/src/main/res/layout/layout_card_design.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="?attr/colorSurface"
     android:clickable="true"
     android:focusable="true"
@@ -16,9 +16,10 @@
         <ImageView
             android:id="@+id/image_view_design"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dp_200"
             android:adjustViewBounds="true"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toTopOf="@id/text_view_design_name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -29,7 +30,7 @@
             style="@style/Theme.TailorMade.CornerRounded.Top"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_8"
-            android:background="?attr/colorSurface"
+            android:background="@drawable/drawable_rounded_top_background"
             app:layout_constraintBottom_toBottomOf="@id/image_view_design"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -62,8 +63,8 @@
             style="@style/TextAppearance.TailorMade.Body2.Primary.Bold"
             android:layout_width="@dimen/dp_0"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_4"
             android:layout_marginStart="@dimen/dp_8"
+            android:layout_marginTop="@dimen/dp_4"
             android:layout_marginBottom="@dimen/dp_12"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/text_view_design_name"
