--- a/features/tailormade_design_detail/src/main/res/layout/fragment_add_color_bottom_sheet.xml
+++ b/features/tailormade_design_detail/src/main/res/layout/fragment_add_color_bottom_sheet.xml
@@ -40,7 +40,9 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_text_color_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.skydoves.colorpickerview.ColorPickerView
