--- a/app/src/main/res/layout/fragment_history_detail.xml
+++ b/app/src/main/res/layout/fragment_history_detail.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dp_1"
         android:orientation="vertical"
         tools:context=".feature.history.view.HistoryDetailFragment">
 
@@ -50,7 +51,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_24"
-            android:layout_marginBottom="@dimen/dp_8"
             android:text="@string/measurement_details_label" />
 
         <include
@@ -75,6 +75,7 @@
             style="@style/TextAppearance.TailorMade.Body2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dp_16"
             android:visibility="gone"
             tools:text="@string/special_instructions_label"
             tools:visibility="visible" />
