--- a/app/src/main/res/layout/fragment_thanks_for_order.xml
+++ b/app/src/main/res/layout/fragment_thanks_for_order.xml
@@ -8,7 +8,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dp_16"
         android:orientation="vertical"
         tools:context=".feature.checkout.view.ThanksForOrderFragment">
 
@@ -91,7 +90,9 @@
             android:id="@+id/layout_design_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/dp_1"
             android:layout_marginTop="@dimen/dp_16"
+            android:layout_marginBottom="@dimen/dp_4"
             layout="@layout/layout_cart_item" />
 
     </LinearLayout>
