--- a/app/src/main/res/layout/layout_history_card_item.xml
+++ b/app/src/main/res/layout/layout_history_card_item.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:elevation="@dimen/dp_4"
+    android:layout_margin="@dimen/dp_1"
+    app:cardElevation="@dimen/dp_4"
     app:cardCornerRadius="@dimen/dp_8">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -155,11 +156,11 @@
 
         <include
             android:id="@+id/layout_history_ordered_total"
-            layout="@layout/layout_ordered_total"
             android:layout_width="@dimen/dp_0"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/dp_12"
             android:layout_marginTop="@dimen/dp_12"
+            layout="@layout/layout_ordered_total"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/image_view_history_design_ordered"
             app:layout_constraintTop_toBottomOf="@id/text_view_history_design_ordered_price" />
