--- a/app/src/main/res/layout/fragment_history_detail.xml
+++ b/app/src/main/res/layout/fragment_history_detail.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dp_1"
+        android:padding="@dimen/dp_1"
         android:orientation="vertical"
         tools:context=".feature.history.view.HistoryDetailFragment">
 
