--- a/tailor-app/src/main/res/layout/layout_card_order_item.xml
+++ b/tailor-app/src/main/res/layout/layout_card_order_item.xml
@@ -7,7 +7,8 @@
     android:layout_margin="@dimen/dp_1"
     android:clickable="true"
     android:elevation="@dimen/dp_4"
-    android:focusable="true">
+    android:focusable="true"
+    app:cardElevation="@dimen/dp_4">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
