--- a/app/src/main/res/layout/fragment_history_detail.xml
+++ b/app/src/main/res/layout/fragment_history_detail.xml
@@ -7,7 +7,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dp_1"
         android:orientation="vertical"
         tools:context=".feature.history.view.HistoryDetailFragment">
 
@@ -15,6 +14,7 @@
             android:id="@+id/layout_card_history_detail_order_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dp_2"
             layout="@layout/layout_card_history_detail_order_info" />
 
         <TextView
@@ -30,6 +30,7 @@
             android:id="@+id/layout_payment_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dp_2"
             layout="@layout/layout_payment_detail_card" />
 
         <View
@@ -43,6 +44,7 @@
             android:id="@+id/layout_design_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dp_2"
             layout="@layout/layout_cart_item" />
 
         <TextView
