--- a/features/tailormade_chat/src/main/res/layout/activity_chat_room.xml
+++ b/features/tailormade_chat/src/main/res/layout/activity_chat_room.xml
@@ -29,12 +29,13 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_chat_room"
             android:layout_width="@dimen/dp_0"
-            android:layout_height="match_parent"
+            android:layout_height="@dimen/dp_0"
+            android:layout_margin="@dimen/dp_8"
+            android:layout_marginBottom="@dimen/dp_72"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/top_appbar_layout_chat_room"
-            app:stackFromEnd="true" />
+            app:layout_constraintTop_toBottomOf="@id/top_appbar_layout_chat_room" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
