--- a/features/tailormade_chat/src/main/res/layout/layout_chat_content_send.xml
+++ b/features/tailormade_chat/src/main/res/layout/layout_chat_content_send.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_gravity="end"
     android:background="@drawable/drawable_chat_send"
     android:elevation="@dimen/dp_4"
     android:paddingHorizontal="@dimen/dp_12"
