--- a/libraries/tailormade_dls/src/main/res/values/dimens.xml
+++ b/libraries/tailormade_dls/src/main/res/values/dimens.xml
@@ -25,6 +25,7 @@
     <dimen name="dp_120">120dp</dimen>
     <dimen name="dp_100">100dp</dimen>
     <dimen name="dp_80">80dp</dimen>
+    <dimen name="dp_72">72dp</dimen>
     <dimen name="dp_64">64dp</dimen>
     <dimen name="dp_56">56dp</dimen>
     <dimen name="dp_50">50dp</dimen>
