--- a/features/tailormade_chat/src/main/res/layout/activity_chat_room.xml
+++ b/features/tailormade_chat/src/main/res/layout/activity_chat_room.xml
@@ -32,6 +32,7 @@
             android:layout_height="@dimen/dp_0"
             android:layout_margin="@dimen/dp_8"
             android:layout_marginBottom="@dimen/dp_72"
+            app:stackFromEnd="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
