--- a/libraries/tailormade_dls/src/main/res/layout/layout_spin_button_number.xml
+++ b/libraries/tailormade_dls/src/main/res/layout/layout_spin_button_number.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:id="@+id/spin_button_number_reduce"
             style="@style/Theme.TailorMade.Button.Outlined.Rounded.Left"
             android:layout_width="wrap_content"
@@ -18,7 +18,7 @@
 
         <Button
             android:id="@+id/spin_number_value"
-            style="?attr/materialButtonOutlinedStyle"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/dp_40"
             android:enabled="false"
