INCREASE-AND-DECREASE-CART-ITEM: Fix crash on settings and change unused notification menu
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_profile/src/main/res/layout/activity_settings.xml
+++ b/features/tailormade_profile/src/main/res/layout/activity_settings.xml
@@ -18,7 +18,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <FrameLayout
-        android:id="@+id/fl_settings"
+        android:id="@+id/layout_settings"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
