INCREASE-AND-DECREASE-CART-ITEM: Fix chat ui bug
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_chat/src/main/res/layout/layout_chat_content_send.xml
+++ b/features/tailormade_chat/src/main/res/layout/layout_chat_content_send.xml
@@ -2,7 +2,8 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginVertical="@dimen/dp_2">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
@@ -20,6 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/dp_12"
             android:text="@string/chat_content_label"
+            android:textColor="@color/color_black_87"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/text_view_chat_content_send_time"
             app:layout_constraintTop_toTopOf="parent" />
@@ -30,6 +32,7 @@
             android:layout_width="@dimen/dp_0"
             android:layout_height="wrap_content"
             android:text="@string/chat_content_send_time_label"
+            android:textColor="@color/color_black_54"
             app:layout_constraintBottom_toBottomOf="@id/text_view_chat_content_send_text"
             app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
