--- a/features/tailormade_chat/src/main/res/layout/layout_chat_content_reply.xml
+++ b/features/tailormade_chat/src/main/res/layout/layout_chat_content_reply.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/dp_12"
         android:text="@string/chat_content_label"
+        android:textColor="@color/color_black_87"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/text_view_chat_content_reply_time"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:text="@string/chat_content_reply_time_label"
+        android:textColor="@color/color_black_54"
         app:layout_constraintBottom_toBottomOf="@id/text_view_chat_content_reply_text"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
