--- a/features/tailormade_chat/src/main/res/layout/activity_chat_room.xml
+++ b/features/tailormade_chat/src/main/res/layout/activity_chat_room.xml
@@ -30,8 +30,9 @@
             android:id="@+id/recycler_view_chat_room"
             android:layout_width="@dimen/dp_0"
             android:layout_height="@dimen/dp_0"
-            android:layout_margin="@dimen/dp_8"
-            android:layout_marginBottom="@dimen/dp_72"
+            android:layout_marginHorizontal="@dimen/dp_8"
+            android:layout_marginTop="@dimen/dp_8"
+            android:layout_marginBottom="@dimen/dp_80"
             app:stackFromEnd="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
