--- a/features/tailormade_chat/src/main/res/layout/layout_chat_content_send.xml
+++ b/features/tailormade_chat/src/main/res/layout/layout_chat_content_send.xml
@@ -2,13 +2,13 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginVertical="@dimen/dp_2">
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
+        android:layout_marginVertical="@dimen/dp_2"
         android:background="@drawable/drawable_chat_send"
         android:elevation="@dimen/dp_4"
         android:paddingHorizontal="@dimen/dp_12"
