--- a/features/tailormade_chat/src/main/res/drawable/chat_item_separator.xml
+++ b/features/tailormade_chat/src/main/res/drawable/chat_item_separator.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <size android:height="@dimen/dp_8" />
-    <solid android:color="?attr/colorSurface" />
+    <solid android:color="?android:attr/colorBackground" />
 </shape>
