--- a/features/tailormade_search/src/main/res/drawable/item_separator.xml
+++ b/features/tailormade_search/src/main/res/drawable/item_separator.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <size android:height="@dimen/dp_4" />
-    <solid android:color="?attr/colorSurface" />
+    <solid android:color="?android:attr/colorBackground" />
 </shape>
